# gpt-task

./: .gitignore  README.md  pyproject.toml  requirements_cuda.txt  requirements_macos.txt
docs/: architecture.md  model_cache.md  prompt_format_compatibility.md  streaming_design.md
examples/: chat_template_example.py  config_example.py  deepseek_r1_distill_qwen_example.py  deepseek_v31_example.py  deepseek_v31_tool_call_example.py  deepseek_v32_example.py  deepseek_v32_tool_call_example.py  qwen2.5_example.py  qwen2.5_with_cache_example.py  qwen2_5_vl_3b_example.py  qwen3_example.py  qwen3_with_cache_example.py  streaming_example.py  streaming_tool_call_example.py  tool_call_example.py
schema/: gpt-inference-task.json
src/gpt_task/: config.py
src/gpt_task/cache/: abc.py  memory_impl.py
src/gpt_task/inference/: errors.py  inference.py  utils.py
src/gpt_task/inference/prompt_adapters/: __init__.py  deepseek_v32.py  fallback.py  interface.py  registry.py  template.py  utils.py
src/gpt_task/inference/tp/: __init__.py  api.py  executor.py  rank_worker.py
src/gpt_task/models/: args.py
