[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt_task"
authors = [{ name = "lukew", email = "lukew@crynux.ai" }]
description = "A general framework to define and execute the GPT text generation task."
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
version = "3.2.0"
dependencies = [
    "numpy",
    "scipy",
    "torch>=2.12",
    "transformers>=5.2.0,<6",
    "transformers_stream_generator",
    "sentencepiece",
    "accelerate",
    "tiktoken",
    "einops",
    "pydantic",
    "pydantic-settings"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gpt_task*"]
